# DataMining

./: .gitignore  kazan_parser.ipynb  kazan_parser.py
CBF/: pyproject.toml
CBF/cbf/: main.py  text.txt
Crawler/: crawler.py  data.json  dataqqq.json  graph.gml  matrix.py  pyproject.toml
VkParser/: config.ini  dag.py  main.py  pyproject.toml  requirements.txt  words.html
VkParser/vkparser/: main.py  postgres.py
