[tool.poetry]
name = "crawler"
version = "0.1.0"
description = ""
authors = ["Danis <zinnatullin2012@inbox.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
bs4 = "^0.0.1"
pandas = "^1.2.3"
networkx = "^2.5.1"
matplotlib = "^3.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
