[tool.poetry]
name = "vkparser"
version = "0.1.0"
description = ""
authors = ["Danis <zinnatullin2012@inbox.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
vk = "^2.0.2"
emoji = "^1.2.0"
psycopg2 = "^2.8.6"
pandas = "^1.2.3"
matplotlib = "^3.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
